third_party/move/move-compiler-v2/tests/visibility-checker/package_visibility_script.exp

Diagnostics:
error: unnecessary or extraneous item
  ┌─ tests/visibility-checker/package_visibility_script.move:2:5
  │
2 │     public(package) fun main() {
  │     ^^^^^^^^^^^^^^^ Invalid 'public(package)' visibility modifier. Script functions are not callable from other Move functions.
